fix: change PageHeader z-index

--- a/src/components/PageHeader/PageHeader.module.scss
+++ b/src/components/PageHeader/PageHeader.module.scss
@@ -1,28 +1,28 @@
-@import '../../globals';
+@import "../../globals";
 
-.PageHeader{
-    height:80px;
-    width:100%;
-    background: $white;
-    display: grid;
-    grid-template-columns: 30px auto 32px;
-    column-gap: 24px;
-    padding:24px;
-    align-items: center;
-    position: fixed;
-    top:0;
+.PageHeader {
+  height: 80px;
+  width: 100%;
+  background: $white;
+  display: grid;
+  grid-template-columns: 30px auto 32px;
+  column-gap: 24px;
+  padding: 24px;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 3;
 }
 
-.Chevron{
-    @extend %clearbutton;
-
+.Chevron {
+  @extend %clearbutton;
 }
 
-.Action{
-    @extend %clearbutton;
+.Action {
+  @extend %clearbutton;
 }
 
-.Label{
-    line-height: 32px;
-    color: $primary
+.Label {
+  line-height: 32px;
+  color: $primary;
 }
